Status text wrap fix

--- a/app/components/booking/property-info/property-info.component.css
+++ b/app/components/booking/property-info/property-info.component.css
@@ -90,6 +90,7 @@
     color: #fff;
     line-height: 18px;
     display: none;
+    white-space: nowrap;
 }
 
 .enquiry-header .villa-container .enquiry-status.accepted {
